@for, @if, component DragonballPageComponent

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -23,4 +23,7 @@
         >Counter</a
     >
     <a [routerLink]="['/hero']" [routerLinkActive]="['active']">Hero</a>
+    <a [routerLink]="['/dragonball']" [routerLinkActive]="['active']"
+        >Dragonball</a
+    >
 </nav>
