--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -26,4 +26,7 @@
     <a [routerLink]="['/dragonball']" [routerLinkActive]="['active']"
         >Dragonball</a
     >
+    <a routerLink="/dragonball-super" routerLinkActive="active"
+        >Dragonball Super</a
+    >
 </nav>
